# BattleUnitTask

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  map.json
map_reader/: CMakeLists.txt
map_reader/src/: MapReader.cpp
map_reader/test/: CMakeLists.txt  MapReaderUnitTest.cpp
path_finder/: CMakeLists.txt
path_finder/include/: Algorithm.h
path_finder/src/: Algorithm.cpp
path_finder/test/: AlgorithmUnitTest.cpp  CMakeLists.txt
tilemap/: CMakeLists.txt
tilemap/include/: MapReader.h
tilemap/src/: MapReader.cpp
tilemap/test/: CMakeLists.txt  MapReaderUnitTest.cpp
